Make branch merge-ready with 255 passing tests and doc sync.
Fix WebMvcTest security mocks, H2 test isolation, and Finhub resilience so retries run before circuit-breaker fallback. Expand fixtures (FB?META, TWTR cash merger) and update PROJECT_STATUS, CHECKLIST, and README for Phase 0 complete.

Co-authored-by: Cursor <cursoragent@cursor.com>